added missing overide keyword in concrete implemention

--- a/SED500-Assign1.vcxproj
+++ b/SED500-Assign1.vcxproj
@@ -130,7 +130,18 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="test.c" />
+    <ClCompile Include="AnalogCircuit.cpp" />
+    <ClCompile Include="AnalogCircuitMain.cpp" />
+    <ClCompile Include="Capacitor.cpp" />
+    <ClCompile Include="Inductor.cpp" />
+    <ClCompile Include="Resistor.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="AnalogCircuit.h" />
+    <ClInclude Include="Capacitor.h" />
+    <ClInclude Include="Component.h" />
+    <ClInclude Include="Inductor.h" />
+    <ClInclude Include="Resistor.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
